deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-app
  name: sample-deploy
spec:
  replicas: 4
  selector:
    matchLabels:
      app: sample-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 2
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - image: nginx:1.16
        name: nginx
        resources: {}
