svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-svc
spec:
  type: NodePort
  selector:
    app: sample-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30007
